--- a/craigslist.ipynb
+++ b/craigslist.ipynb
@@ -37,6 +37,16 @@
     "# URL of page to be scraped\n",
     "url = 'https://newjersey.craigslist.org/search/sss?sort=rel&query=guitar'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve page with the requests module\n",
+    "response = requests.get(url)"
+   ]
   }
  ]
 }
