--- a/craigslist.ipynb
+++ b/craigslist.ipynb
@@ -47,6 +47,16 @@
     "# Retrieve page with the requests module\n",
     "response = requests.get(url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create BeautifulSoup object; parse with 'html.parser'\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')"
+   ]
   }
  ]
 }
