--- a/craigslist.ipynb
+++ b/craigslist.ipynb
@@ -57,6 +57,16 @@
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(response.text, 'html.parser')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examine the results, then determine element that contains sought info\n",
+    "print(soup.prettify())"
+   ]
   }
  ]
 }
