--- a/craigslist.ipynb
+++ b/craigslist.ipynb
@@ -67,6 +67,16 @@
     "# Examine the results, then determine element that contains sought info\n",
     "print(soup.prettify())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examine the results, then determine element that contains sought info\n",
+    "print(soup.prettify())"
+   ]
   }
  ]
 }
