--- a/craigslist.ipynb
+++ b/craigslist.ipynb
@@ -77,6 +77,33 @@
     "# Examine the results, then determine element that contains sought info\n",
     "print(soup.prettify())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through returned results\n",
+    "for result in results:\n",
+    "    # Error handling\n",
+    "    try:\n",
+    "        # Identify and return title of listing\n",
+    "        title = result.find('a', class_=\"result-title\").text\n",
+    "        # Identify and return price of listing\n",
+    "        price = result.a.span.text\n",
+    "        # Identify and return link to listing\n",
+    "        link = result.a['href']\n",
+    "\n",
+    "        # Print results only if title, price, and link are available\n",
+    "        if (title and price and link):\n",
+    "            print('-------------')\n",
+    "            print(title)\n",
+    "            print(price)\n",
+    "            print(link)\n",
+    "    except AttributeError as e:\n",
+    "        print(e)"
+   ]
   }
  ]
 }
